tests/golden/parse_errors/map_missing_colon.err
Parse error at 1:19: expected `:` after map key, found Number `1`
  let values = {"a" 1};
                    ^
Parse error at 1:21: expected expression
  let values = {"a" 1};
                      ^
